fix overflow in html page

--- a/SMTInterpol/web/smtinterpol.css
+++ b/SMTInterpol/web/smtinterpol.css
@@ -14,7 +14,7 @@ body {
     background: #c0b0ff;
     width: 100%;
     margin: 0;
-    padding: 0.3em;
+    padding: 0.3em 0;
     z-index:100;
 }
 
